--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ img {
     display: block;
     width: 100%;
     height: auto;
-    margin: 0 auto;
+    margin: -10% auto 0 auto;
 }
 .result_area {
-    margin: 5px auto;
+    margin: -10% auto 0 auto;
     text-align: center;
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 25px;
@@ -21,19 +21,20 @@ img {
 .input {
     display: flex;
     flex-wrap: nowrap;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
     width: 100%;
     padding: 0;
-    margin: 5% 0 0 20%;
+    margin: 5% 0 0 0;
 }
 .user_input {
     width: 100%;
-    height: 40px;
     box-sizing: border-box;
     border: 4px solid navy;
 }
 .play_button {
     width: 100%;
-    height: 40px;
     box-sizing: border-box;
     border: 4px solid navy;
     background-color: navy;
@@ -60,6 +61,9 @@ img {
 .reset_button:hover {
     background-color: red;
 }
+.img02 {
+    margin: 0 auto;
+}
 /* 모바일 끝 */
 /* 테블릿 시작 */
 @media (min-width: 768px) {
@@ -67,41 +71,40 @@ img {
         max-width: 1259px;
     }
     .img01 {
-        position: relative;
-        top: 10%;
         width: 80%;
+        margin: -5% auto 0 auto;
     }
     .result_area {
-        position: absolute;
-        top: 33%;
-        margin: 0 0 0 30%;
+        margin: -5% 0 0 5%;
         font-size: 50px;
         text-align: center;
     }
     .input {
-        position: absolute;
-        top: 38%;
-        left: 5%;
+        margin: 5% 0 0 15%;
     }
     .user_input {
-        width: 350px;
-        height: 70px;
+        width: 60%;
+        border-radius: 5px;
     }
     input[type='number'] {
         font-size: 45px;
     }
     .play_button {
-        width: 100px;
-        height: 70px;
+        width: 100%;
+        height: 73px;
+        margin: 0 0 0 -250%;
+        font-size: 45px;
+        border-radius: 5px;
     }
     .chance_areas {
         font-size: 50px;
-        margin: 13% auto;
+        margin: 10% auto 0 auto;
     }
     .reset_button {
         height: 70px;
-        margin: -7% 0 0 30%;
+        margin: 7% 0 0 30%;
         border-radius: 30px;
+        font-size: 45px;
     }
     .img02 {
         width: 50%;
@@ -117,17 +120,37 @@ img {
         position: inherit;
     }
     .img01 {
-        width: 500px;
-        margin: 0 0 0 30%;
+        width: 60%;
+        margin: -10% auto 0 auto;
     }
     .result_area {
         width: 800px;
-        margin: 0 auto;
+        margin: -10% auto 0 auto;
+        font-size: 70px;
+        text-align: center;
     }
-    .img02 {
-        display: inline-block;
-        position: relative;
-        top: 0;
-        opacity: 0.5;
+    .input {
+        margin: 5% 0 5% 0;
+    }
+    .user_input {
+        width: 100%;
+        border-radius: 10px;
+        font-size: 40px;
+    }
+    .play_button {
+        width: 100%;
+        height: 73px;
+        margin: 0 0 0 8%;
+        font-size: 40px;
+        border-radius: 5px;
+    }
+    .chance_areas {
+        margin: 0;
+        font-size: 70px;
+    }
+    .reset_button {
+        width: 30%;
+        margin: 5% auto 0 35%;
+        font-size: 40px;
     }
 }
