--- a/style.css
+++ b/style.css
@@ -1,68 +1,76 @@
 @charset "utf-8";
 #wrap {
     position: relative;
-    width: 100%;
     min-width: 320px;
     max-width: 420px;
 }
-img {
+.img01 {
     display: block;
-    width: 100%;
-    height: auto;
-    margin: -10% auto 0 auto;
+    width: 300px;
+    margin: -30px auto 0 auto;
 }
 .result_area {
-    margin: -10% auto 0 auto;
+    width: 300px;
+    margin: 0 auto 20px auto;
+    height: 30px;
     text-align: center;
-    font-family: 'Noto Sans KR', sans-serif;
     font-size: 25px;
     color: navy;
 }
 .input {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    padding: 0;
-    margin: 5% 0 0 0;
+    position: relative;
+    width: 250px;
+    height: 40px;
+    margin: 0 auto 20px auto;
 }
 .user_input {
-    width: 100%;
+    width: 250px;
+    height: 40px;
     box-sizing: border-box;
     border: 4px solid navy;
+    border-radius: 5px;
 }
 .play_button {
-    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 40px;
     box-sizing: border-box;
     border: 4px solid navy;
+    border-radius: 5px;
     background-color: navy;
     color: white;
-    cursor: pointer;
 }
 .chance_areas {
-    width: 100%;
-    margin: 5% 35% 0 0;
+    width: 150px;
+    margin: 0 auto 30px auto;
     text-align: center;
-    font-family: 'Noto Sans KR', sans-serif;
     font-size: 25px;
     color: navy;
 }
 .reset_button {
-    width: 40%;
-    height: 40px;
-    margin: 5% 0 0 30%;
-    box-sizing: border-box;
+    display: block;
+    width: 150px;
+    height: 50px;
+    margin: 0 auto;
     border-radius: 5px;
+    font-size: 18px;
     background-color: navy;
     color: white;
 }
 .reset_button:hover {
     background-color: red;
+    color: yellow;
 }
 .img02 {
+    display: block;
+    width: 300px;
     margin: 0 auto;
+}
+.img03,
+.img04 {
+    display: none;
 }
 /* 모바일 끝 */
 /* 테블릿 시작 */
@@ -71,86 +79,115 @@ img {
         max-width: 1259px;
     }
     .img01 {
-        width: 80%;
-        margin: -5% auto 0 auto;
+        width: 700px;
+        margin: -100px auto 0 auto;
     }
     .result_area {
-        margin: -5% 0 0 5%;
+        width: 700px;
+        margin: -50px auto 50px auto;
         font-size: 50px;
         text-align: center;
     }
     .input {
-        margin: 5% 0 0 15%;
+        width: 500px;
+        height: 70px;
+        margin: 0 auto 70px auto;
     }
     .user_input {
-        width: 60%;
-        border-radius: 5px;
-    }
-    input[type='number'] {
-        font-size: 45px;
+        width: 500px;
+        height: 70px;
+        border-radius: 10px;
+        font-size: 30px;
     }
     .play_button {
-        width: 100%;
-        height: 73px;
-        margin: 0 0 0 -250%;
-        font-size: 45px;
-        border-radius: 5px;
+        width: 80px;
+        height: 70px;
+        font-size: 30px;
+        border-radius: 10px;
     }
     .chance_areas {
+        width: 300px;
         font-size: 50px;
-        margin: 10% auto 0 auto;
+        margin: 0 auto 70px auto;
     }
     .reset_button {
+        width: 300px;
         height: 70px;
-        margin: 7% 0 0 30%;
-        border-radius: 30px;
-        font-size: 45px;
+        margin: 0 auto;
+        border-radius: 20px;
+        font-size: 30px;
     }
     .img02 {
-        width: 50%;
+        width: 500px;
+    }
+    .img03,
+    .img04 {
+        display: none;
     }
 }
 /* 테블릿 끝 */
 /* PC 시작 */
 @media (min-width: 1260px) {
     #wrap {
+        position: relative;
         max-width: 1920px;
     }
-    * {
-        position: inherit;
+    .container {
+        position: relative;
+        width: 1200px;
+        margin: 0 auto;
     }
     .img01 {
-        width: 60%;
-        margin: -10% auto 0 auto;
+        width: 600px;
+        margin: -100px auto 0 auto;
+    }
+    .img03 {
+        display: block;
+        position: absolute;
+        top: 300px;
+        left: 0;
+        width: 300px;
+        height: 300px;
     }
     .result_area {
-        width: 800px;
-        margin: -10% auto 0 auto;
-        font-size: 70px;
-        text-align: center;
+        width: 500px;
+        margin: -100px auto 20px auto;
+        font-size: 30px;
     }
     .input {
-        margin: 5% 0 5% 0;
+        width: 400px;
+        height: 50px;
+        margin: 0 auto 20px auto;
     }
     .user_input {
-        width: 100%;
-        border-radius: 10px;
-        font-size: 40px;
+        width: 400px;
+        height: 50px;
     }
     .play_button {
-        width: 100%;
-        height: 73px;
-        margin: 0 0 0 8%;
-        font-size: 40px;
-        border-radius: 5px;
+        width: 50px;
+        height: 50px;
+        font-size: 18px;
     }
     .chance_areas {
-        margin: 0;
-        font-size: 70px;
+        width: 300px;
+        height: 30px;
+        margin: 0 auto 20px auto;
+        font-size: 30px;
     }
     .reset_button {
-        width: 30%;
-        margin: 5% auto 0 35%;
-        font-size: 40px;
+        width: 100px;
+        height: 50px;
+        margin: 0 auto 20px auto;
+        font-size: 18px;
+    }
+    .img04 {
+        display: block;
+        position: absolute;
+        top: 300px;
+        right: 0;
+        width: 300px;
+    }
+    .img02 {
+        display: none;
     }
 }
